06-networking/04-gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-lbc
spec:
  controllerName: eks.amazonaws.com/aws-load-balancer-controller
