06-networking/04-gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: to-frontend
  namespace: lab-gw
spec:
  parentRefs:
    - name: public-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: lab-app
          port: 80
